syntax = "proto3";

package redbco.redbopen.transformation.v1;

option go_package = "github.com/redbco/redb-open/api/proto/transformation/v1;transformationv1";

import "google/protobuf/struct.proto";
import "api/proto/common/v1/common.proto";

service TransformationService {
    rpc Transform(TransformRequest) returns (TransformResponse);
    rpc GetTransformationMetadata(GetTransformationMetadataRequest) returns (GetTransformationMetadataResponse);
    rpc ListTransformations(ListTransformationsRequest) returns (ListTransformationsResponse);
}

message TransformRequest {
    string function_name = 1;
    string input = 2;
    google.protobuf.Struct parameters = 3;
    optional string key = 4;
}

message TransformResponse {
    string output = 1;
    string status_message = 2;
    redbco.redbopen.common.v1.Status status = 3;
}

message GetTransformationMetadataRequest {
    string transformation_name = 1;
}

message GetTransformationMetadataResponse {
    TransformationMetadata metadata = 1;
    string status_message = 2;
    redbco.redbopen.common.v1.Status status = 3;
}

message ListTransformationsRequest {
}

message ListTransformationsResponse {
    repeated TransformationMetadata transformations = 1;
}

message TransformationMetadata {
    string name = 1;
    string description = 2;
    string type = 3;  // "passthrough", "generator", "null_returning"
    bool requires_source = 4;
    bool requires_target = 5;
    bool allows_multiple_targets = 6;
}